--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.initialization-mode=always
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432
+spring.datasource.url=jdbc:postgresql://localhost:5432/thoughts
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.datasource.username=postgres
+spring.datasource.password=postgres
